no need to include header file in compilation process

--- a/opentld/libopentld/CMakeLists.txt
+++ b/opentld/libopentld/CMakeLists.txt
@@ -1,36 +1,20 @@
-add_library(libopentld
-    ImAcq.cpp
-    BB.cpp
-    BBPredict.cpp
-    FBTrack.cpp
-    Lk.cpp
-    Median.cpp
-    Clustering.cpp
-    DetectionResult.cpp
-    DetectorCascade.cpp
-    EnsembleClassifier.cpp
-    ForegroundDetector.cpp
-    MedianFlowTracker.cpp
-    NNClassifier.cpp
-    TLD.cpp
-    TLDUtil.cpp
-    VarianceFilter.cpp
-    ImAcq.h
-    BB.h
-    BBPredict.h
-    FBTrack.h
-    Lk.h
-    Median.h
-    Clustering.h
-    DetectionResult.h
-    DetectorCascade.h
-    EnsembleClassifier.h
-    ForegroundDetector.h
-    IntegralImage.h
-    MedianFlowTracker.h
-    NNClassifier.h
-    NormalizedPatch.h
-    TLD.h
-    TLDUtil.h
-    VarianceFilter.h)
-target_link_libraries(libopentld ${OpenCV_LIBS})    
+ADD_LIBRARY(libopentld
+            ImAcq.cpp
+            BB.cpp
+            BBPredict.cpp
+            FBTrack.cpp
+            Lk.cpp
+            Median.cpp
+            Clustering.cpp
+            DetectionResult.cpp
+            DetectorCascade.cpp
+            EnsembleClassifier.cpp
+            ForegroundDetector.cpp
+            MedianFlowTracker.cpp
+            NNClassifier.cpp
+            TLD.cpp
+            TLDUtil.cpp
+            VarianceFilter.cpp
+           )
+
+TARGET_LINK_LIBRARIES(libopentld ${OpenCV_LIBS})
