--- a/opentld/tldmain/CMakeLists.txt
+++ b/opentld/tldmain/CMakeLists.txt
@@ -1,11 +1,12 @@
-add_library(tldmain Config.cpp
-                    Gui.cpp
-                    Main.cpp
-                    Settings.cpp
-                    
-                    Config.h
-                    Gui.h
-                    Main.h
-                    Settings.h)
-target_link_libraries(tldmain libopentld cvblobs libconfig)                    
-                    
+ADD_LIBRARY(tldmain
+            Config.cpp
+            Gui.cpp
+            Main.cpp
+            Settings.cpp
+           )
+
+TARGET_LINK_LIBRARIES(tldmain
+                      libopentld
+                      cvblobs
+                      libconfig
+                     )
