--- a/opentld/cvblobs/CMakeLists.txt
+++ b/opentld/cvblobs/CMakeLists.txt
@@ -1,14 +1,8 @@
-add_library(cvblobs
-    blob.cpp
-    BlobContour.cpp
-    BlobOperators.cpp
-    BlobProperties.cpp
-    BlobResult.cpp
-    ComponentLabeling.cpp
-    blob.h
-    BlobContour.h
-    BlobLibraryConfiguration.h
-    BlobOperators.h
-    BlobProperties.h
-    BlobResult.h
-    ComponentLabeling.h) 
+ADD_LIBRARY(cvblobs
+            blob.cpp
+            BlobContour.cpp
+            BlobOperators.cpp
+            BlobProperties.cpp
+            BlobResult.cpp
+            ComponentLabeling.cpp
+           )
