--- a/opentld/libconfig/CMakeLists.txt
+++ b/opentld/libconfig/CMakeLists.txt
@@ -1,15 +1,8 @@
-add_library(libconfig
-    grammar.c
-    libconfig.c
-    libconfigcpp.cc
-    scanctx.c
-    scanner.c
-    strbuf.c
-    grammar.h
-    libconfig.h
-    libconfig.hh
-    parsectx.h
-    scanctx.h
-    scanner.h
-    strbuf.h
-    wincompat.h) 
+ADD_LIBRARY(libconfig
+            grammar.c
+            libconfig.c
+            libconfigcpp.cc
+            scanctx.c
+            scanner.c
+            strbuf.c
+           )
